--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,62 @@
-#root {
-  max-width: 1280px;
+.sidebar
+{
+  height: 100vh;
+}
+.main
+{
+  height: 100vh;
+}
+.content
+{
+  height: 90%;
+}
+.sidebar
+{
+  width: 100%;
+  padding: 5px;
+
+}
+.col-3
+{
+  background-color: #404040 !important;
+  border-radius: 15px !important;
+}
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 24px;
+  padding: 8px 16px;
+  max-width: 600px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.search-input {
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  font-size: 16px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: #555;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.row
+{
+  background-color:black;
+  color: #fff;
+  margin-top: 5px;
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.navbar
+{
+  line-height: 26px;
+  font-size: 17px;
 }
